{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 54,
  "lineage": "dfcc27f8-055e-33fa-a8dc-bc597eab6de2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kiu_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418393821:internet-gateway/igw-0c19ca478fef95d8d",
            "id": "igw-0c19ca478fef95d8d",
            "owner_id": "905418393821",
            "tags": {
              "Name": "kiu-internet-gateway"
            },
            "tags_all": {
              "Name": "kiu-internet-gateway"
            },
            "vpc_id": "vpc-019bc600b80ed4c65"
          },
          "dependencies": [
            "aws_vpc.kiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "kiu_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905418393821:loadbalancer/app/kiu-lb/44170b665daf6914",
            "arn_suffix": "app/kiu-lb/44170b665daf6914",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "kiu-lb-1432122464.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418393821:loadbalancer/app/kiu-lb/44170b665daf6914",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "kiu-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c11256347b4e7aa4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-041c69941edd26fad"
              },
              {
                "subnet_id": "subnet-08c01085da9a1707c"
              }
            ],
            "subnets": [
              "subnet-041c69941edd26fad",
              "subnet-08c01085da9a1707c"
            ],
            "vpc_id": "vpc-019bc600b80ed4c65",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.kiu_subnet_public",
            "aws_vpc.kiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kiu_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418393821:route-table/rtb-07167860bc63328f8",
            "id": "rtb-07167860bc63328f8",
            "owner_id": "905418393821",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c19ca478fef95d8d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kiu-public-route-table"
            },
            "tags_all": {
              "Name": "kiu-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-019bc600b80ed4c65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kiu_igw",
            "aws_vpc.kiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kiu_public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be57304ff2188b5b",
            "route_table_id": "rtb-07167860bc63328f8",
            "subnet_id": "subnet-041c69941edd26fad"
          },
          "dependencies": [
            "aws_internet_gateway.kiu_igw",
            "aws_route_table.kiu_public_rt",
            "aws_subnet.kiu_subnet_public",
            "aws_vpc.kiu_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f10ac9583684685",
            "route_table_id": "rtb-07167860bc63328f8",
            "subnet_id": "subnet-08c01085da9a1707c"
          },
          "dependencies": [
            "aws_internet_gateway.kiu_igw",
            "aws_route_table.kiu_public_rt",
            "aws_subnet.kiu_subnet_public",
            "aws_vpc.kiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418393821:security-group/sg-0d9c931d59995050d",
            "description": "Allow database access only from EKS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9c931d59995050d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-035c5a4a7fff66090"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "kiu-db-security-group",
            "name_prefix": "",
            "owner_id": "905418393821",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019bc600b80ed4c65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_sg",
            "aws_vpc.kiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418393821:security-group/sg-035c5a4a7fff66090",
            "description": "Allow worker nodes to communicate",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035c5a4a7fff66090",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "kiu-eks-security-group",
            "name_prefix": "",
            "owner_id": "905418393821",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019bc600b80ed4c65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418393821:security-group/sg-0c11256347b4e7aa4",
            "description": "Allow inbound traffic for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c11256347b4e7aa4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "kiu-lb-security-group",
            "name_prefix": "",
            "owner_id": "905418393821",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019bc600b80ed4c65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kiu_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418393821:subnet/subnet-041c69941edd26fad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041c69941edd26fad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418393821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kiu-subnet-public-0"
            },
            "tags_all": {
              "Name": "kiu-subnet-public-0"
            },
            "vpc_id": "vpc-019bc600b80ed4c65"
          },
          "dependencies": [
            "aws_vpc.kiu_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418393821:subnet/subnet-08c01085da9a1707c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c01085da9a1707c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418393821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kiu-subnet-public-1"
            },
            "tags_all": {
              "Name": "kiu-subnet-public-1"
            },
            "vpc_id": "vpc-019bc600b80ed4c65"
          },
          "dependencies": [
            "aws_vpc.kiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kiu_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418393821:vpc/vpc-019bc600b80ed4c65",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-016a97452a85d78f1",
            "default_route_table_id": "rtb-074d4f8f1eda9b447",
            "default_security_group_id": "sg-051cfa6861e724cb1",
            "dhcp_options_id": "dopt-094ee9dc59502be57",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-019bc600b80ed4c65",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-074d4f8f1eda9b447",
            "owner_id": "905418393821",
            "tags": {
              "Name": "kiu-vpc"
            },
            "tags_all": {
              "Name": "kiu-vpc"
            }
          }
        }
      ]
    }
  ]
}